<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HApper</string>
    <string name="action_settings">Settings</string>

    <!-- Informacion relativa a los ajustes -->
    <string name="btn_ayuda">Ayuda</string>
    <string name="btn_caminata">Iniciar Caminata</string>

    <!-- Informacion relativa a el juego -->
    <string name="btn_juego">Juego Mental</string>
    <string name="title_activity_juego">Juego Mental</string>

    <!-- Informacion relativa a la persona -->
    <string name="lbl_Nombre_Persona">Nombre de la persona</string>
    <string name="lbl_Relacion">Relacion:</string>
    <string name="lbl_Relacion_Persona">Relacion con la persona</string>
    <string name="lbl_Fecha_Nacimiento_Persona">Fecha de Nacimiento:</string>
    <string name="lbl_Genero_Persona">Genero:</string>

    <!-- Informacion relativa a la alarma -->
    <string name="btn_alarmas">Alarmas</string>
    <string name="title_activity_alarmas">Alarmas</string>
    <string name="btn_agregar_alarmas">Agregar Alarma</string>
    <string name="lbl_Alarmas">Alarmas Agregadas</string>
    <string name="title_activity_agregar_alarma">Nueva alarma</string>
    <string name="lbl_Nombre">Nombre:</string>
    <string name="lbl_Nombre_Alarma">Nombre de la alarma</string>
    <string name="lbl_Descripcion">Descripción:</string>
    <string name="lbl_Descripcion_Alarma">Descripción de la Alarma</string>
    <string name="lbl_Imagen">Imagen:</string>
    <string name="cd_Imagen">Imagen</string>
    <string name="lbl_Fecha_Lanzamiento">Fecha de Ejecución:</string>
    <string name="lbl_Hora">Hora:</string>
    <string name="btn_Aceptar">Aceptar</string>
    <string name="btn_Cancelar">Cancelar</string>
    <string name="title_activity_detalle_alarma">Detalle Alarma</string>
    <string name="lbl_Fecha_Creacion">Fecha de creación:</string>
    <string name="btn_Modificar">Modificar</string>
    <string name="btn_Eliminar">Eliminar</string>
    <string name="title_activity_modificar_alarma">Modificar Alarma</string>
    <string name="btn_Establecer">Establecer</string>
    <string name="btn_Empezar">Empezar</string>
    <string name="btn_Agregar_Pregunta">Agregar Pregunta</string>
    <string name="btn_Personas">Personas</string>
    <string name="title_activity_preguntas">Game!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_agregar_pregunta">Agregar Pregunta</string>
    <string name="title_activity_configuracion_juego">Configuración</string>
    <string name="lbl_Titulo">Titulo</string>
    <string name="btn_agregar_persona">Agregar Persona</string>
    <string name="btn_agregar_lugar">Agregar Lugar</string>
    <string name="btn_agregar_objeto">Agregar Objeto</string>
    <string name="btn_ver_preguntas">Preguntas Agregadas</string>
    <string name="lbl_Lista_Juego">Datos agregados</string>
    <string name="lbl_pregunta">Enunciado:</string>
    <string name="lbl_Respuesta_Correcta">Respuesta correcta:</string>
    <string name="lbl_Alternativa">Altenativa:</string>
    <string name="title_activity_ayuda">Ayuda</string>

    <!-- Informacion relativa a las preferencias -->
    <string name="btn_ajustes">Ajustes</string>
    <string name="title_activity_app_preferences">AppPreferencesActivity</string>
    <string name="title_activity_ajustes">AjustesActivity</string>
    <string name="btn_Lugares">Lugares</string>
    <string name="btn_Objetos">Objetos</string>
    <string name="title_activity_personas">Personas</string>
    <string name="title_activity_lugares">Lugares</string>
    <string name="title_activity_objetos">Objetos</string>
    <string name="lbl_Objetos">Objetos</string>
    <string name="lbl_Lugares">Lugares</string>
    <string name="lbl_Personas">Personas</string>
    <string name="title_activity_detalle_persona">DetallePersonaActivity</string>
    <string name="title_activity_agregar_persona">AgregarPersonaActivity</string>
    <string name="title_activity_modificar_persona">ModificarPersonaActivity</string>

</resources>
