<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="10dp"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context="com.moviles.happer.JuegoActivity" >

    <Button
        android:id="@+id/btnEmpezar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="verPreguntas"
        android:text="@string/btn_Empezar"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnAgregarPregunta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="verAgregarPregunta"
        android:text="@string/btn_Agregar_Pregunta"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnPersonas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="verPersonas"
        android:text="@string/btn_Personas"
        android:textSize="25sp" />
    
        <Button
            android:id="@+id/btnLugares"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="verLugares"
            android:text="@string/btn_Lugares"
            android:textSize="25sp" />
        
            <Button
                android:id="@+id/btnObjetos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="verObjetos"
                android:text="@string/btn_Objetos"
                android:textSize="25sp" />
    
 </LinearLayout>