<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moviles.happer.MainActivity" >

    <Button
        android:id="@+id/btnAlarma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="verAlarmas"
        android:text="@string/btn_alarmas" />

    <!-- No hay nada conectado aun, seria una aplicación vacia -->
    <Button
        android:id="@+id/btnJuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="verJuego"
        android:text="@string/btn_juego" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp" >

        <Button
            android:id="@+id/btnAjustes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.82"
            android:text="@string/btn_ajustes" />

        <Button
            android:id="@+id/btnAyuda"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_ayuda" />
    </LinearLayout>

</LinearLayout>