<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none"
    tools:context="com.moviles.happer.ModificarAlarmaActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="none" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/lbl_Nombre"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtNombreAlarma"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:height="50dp"
            android:hint="@string/lbl_Nombre_Alarma"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/lbl_Descripcion"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:height="100dp"
            android:hint="@string/lbl_Descripcion_Alarma"
            android:inputType="textMultiLine"/>

		<TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/lbl_Fecha_Creacion"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
		<TextView
		    android:id="@+id/lblFechaCreacion"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="center_horizontal"
		    android:paddingBottom="10dp"
		    android:paddingTop="10dp"
		    android:text="@string/lbl_Fecha_Creacion"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:textColor="@android:color/holo_blue_dark" />
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/lbl_Fecha_Lanzamiento"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <DatePicker
            android:id="@+id/dpAlarma"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:calendarViewShown="false"/>
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/lbl_Hora"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TimePicker
            android:id="@+id/tpAlarma"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnEstablecerAlarma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="establecerAlarma"
                android:text="@string/btn_Establecer"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnCancelarModificacionAlarma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancelarModificacionAlarma"
                android:text="@string/btn_Cancelar"
                android:textSize="18sp" />
            
        </LinearLayout>

    </LinearLayout>
</ScrollView>
