<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moviles.happer.AgregarPreguntaActivity" >

    <TextView
        android:id="@+id/lblPregunta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left"
        android:text="@string/lbl_pregunta"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtPregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_Respuesta_Correcta"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtRespuestaCorrecta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_Respuesta_Correcta" >

    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_Alternativa"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtOpcion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_Alternativa" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_Alternativa"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtOpcion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_Alternativa" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_Alternativa"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtOpcion3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_Alternativa" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_Aceptar"
            android:onClick="aceptar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_Cancelar" 
            android:onClick="cancelar"/>

    </LinearLayout>

</LinearLayout>